# MireaPractic

./: CMakeLists.txt
eight_practice/: type3.h  type4.h
second_practice/first_task/: main.cpp  triangle.cpp  triangle.h
second_practice/second_task/: circle.h  main.cpp
second_practice/third_task/: figure.cpp  figure.h  main.cpp
seventh_practice/: main.cpp  type1.h  type2.h
sixth_practice/second_task/: cone.h
sixth_practice/third_task/: bay.h  ocean.h  sea.h
third_pactice/first_task/: eq2.h  main.cpp
third_pactice/second_task/: rational.h
third_pactice/third_task/: rational.h
